[package]
name = "analytics-worker"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.5", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"