[package]
name    = "tg-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker       = { version = "0.7.5" }
wasm-bindgen = "0.2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
futures      = { version = "0.3", default-features = false, features = ["async-await"] }
urlencoding  = "2"


# WASM-оптимизация: минимальный размер бинаря (лимит CF Workers — 1 МБ)
[profile.release]
opt-level     = "s"   # оптимизация по размеру
lto           = true  # link-time optimization
codegen-units = 1     # максимальный инлайнинг
